feat(config): prepare header config

--- a/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/serialization/ConfigSerializerTest/whenSerializing_withNominalValues.yml
+++ b/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/serialization/ConfigSerializerTest/whenSerializing_withNominalValues.yml
@@ -1,3 +1,7 @@
+#         JobsReborn-PatchPlaceBreak
+# A patch place-break extension for JobsReborn
+#                (by Djaytan)
+
 hostname: example.com
 port: 1234
 isSslEnabled: true
