refactor(config): use logback as implement of SLF4J by default

--- a/src/patch-place-break/patch-place-break-config/pom.xml
+++ b/src/patch-place-break/patch-place-break-config/pom.xml
@@ -108,6 +108,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
       <artifactId>commons-test</artifactId>
       <version>${project.version}</version>
