feat(config): use HOCON format instead of YAML
The motivation to change the config format come from a limitation of Configurate about YAML format. It is not possible to serialize a YAML content with comments whereas this is a requirement for the project.
More details can be found here about Configurate and YAML module: https://github.com/SpongePowered/Configurate/pull/175

--- a/pom.xml
+++ b/pom.xml
@@ -272,7 +272,7 @@
       </dependency>
       <dependency>
         <groupId>org.spongepowered</groupId>
-        <artifactId>configurate-yaml</artifactId>
+        <artifactId>configurate-hocon</artifactId>
         <version>${configurate.version}</version>
       </dependency>
       <dependency>
