--- a/src/patch-place-break/patch-place-break-config/pom.xml
+++ b/src/patch-place-break/patch-place-break-config/pom.xml
@@ -79,7 +79,7 @@
     </dependency>
     <dependency>
       <groupId>org.spongepowered</groupId>
-      <artifactId>configurate-yaml</artifactId>
+      <artifactId>configurate-hocon</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
