--- a/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/annotated/DbmsHostValidatingPropertiesTest/whenSerializing_withDefaultValues.conf
+++ b/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/annotated/DbmsHostValidatingPropertiesTest/whenSerializing_withDefaultValues.conf
@@ -4,10 +4,10 @@
 
 # Hostname (an IP address (IPv4/IPv6) or a domain name)
 # Value can't be empty or blank
-hostname="example.com"
+hostname=localhost
 # Whether an SSL/TLS communication must be established at connection time (more secure)
 # Only boolean values accepted (true|false)
 isSslEnabled=true
 # Port
 # Accepted range values: [1-65535]
-port=1234
+port=3306
