feature(config-serialization): serialize with comments the whole config

--- a/src/patch-place-break/patch-place-break-core/src/main/resources/config.conf
+++ b/src/patch-place-break/patch-place-break-core/src/main/resources/config.conf
@@ -29,7 +29,7 @@ dataSource = {
     }
     # Credentials for authentication with the DBMS server
     credentials = {
-      # Under behalf of who user to connect on the DBMS server
+      # Under behalf of which user to connect on the DBMS server
       # Value can't be empty or blank
       username = "username"
       # Password of the user (optional but highly recommended)
