--- a/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/ConfigManagerTest/whenReadingAndValidatingConfig_withMissingRequiredFieldsInConfigFile.conf
+++ b/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/ConfigManagerTest/whenReadingAndValidatingConfig_withMissingRequiredFieldsInConfigFile.conf
@@ -1,3 +1,20 @@
 # This is a test config file
 
-dataSource {}
+type = "SQLITE"
+table = "patch_place_break_tag"
+# Another comment
+dbmsServer = {
+    host = {
+        hostname = "localhost"
+        port = 3306
+        isSslEnabled = true
+    }
+    credentials = {
+        username = "username"
+        password = "password"
+    }
+    database = "database"
+}
+connectionPool = {
+    # MISSING FIELDS HERE
+}
