deps(renovate): add "dependencies" label on PRs

--- a/renovate.json5
+++ b/renovate.json5
@@ -12,6 +12,7 @@
     "org.glassfish:jakarta.el",
     "org.hibernate.validator:hibernate-validator"
   ],
+  "labels": ["dependencies"],
   "packageRules": [
     {
       "matchUpdateTypes": [
