--- a/pom.xml
+++ b/pom.xml
@@ -120,8 +120,6 @@
     <jboss.logging.annotations.version>2.2.1.Final</jboss.logging.annotations.version>
     <jboss.logging.processor.version>2.2.1.Final</jboss.logging.processor.version>
     <jimfs.version>1.2</jimfs.version>
-    <!-- Logback v1.4.0+ require JDK 11: don't bump it!!! -->
-    <logback.version>1.3.5</logback.version>
     <lombok.version>1.18.26</lombok.version>
     <mysql.version>8.0.32</mysql.version>
     <slf4j.version>2.0.6</slf4j.version>
@@ -143,11 +141,6 @@
         <version>${jakarta.ee.api.version}</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
@@ -262,6 +255,11 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-nop</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
       <dependency>
@@ -419,6 +417,10 @@
               org.mockito:mockito-inline
               <!-- Required for static mock -->
             </ignoredUnusedDeclaredDependency>
+            <ignoredUnusedDeclaredDependency>
+              org.slf4j:slf4j-nop
+              <!-- Required for deactivating logs during tests execution -->
+            </ignoredUnusedDeclaredDependency>
           </ignoredUnusedDeclaredDependencies>
         </configuration>
         <executions>
@@ -450,13 +452,15 @@
                 <exclude>org.junit.jupiter</exclude>
                 <exclude>org.mockito</exclude>
                 <exclude>org.projectlombok:lombok</exclude>
+                <exclude>org.slf4j:slf4j-nop</exclude>
               </excludes>
               <includes>
                 <include>com.jparams:to-string-verifier:*:*:test</include>
                 <include>nl.jqno.equalsverifier:equalsverifier:*:*:test</include>
                 <include>org.junit.jupiter:*:*:*:test</include>
                 <include>org.mockito:*:*:*:test</include>
-                <exclude>org.projectlombok:lombok:*:*:provided</exclude>
+                <include>org.projectlombok:lombok:*:*:provided</include>
+                <include>org.slf4j:slf4j-nop:test</include>
               </includes>
             </bannedDependencies>
             <banDuplicatePomDependencyVersions />
