doc(config): explain properties ordering issue

--- a/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/serialization/ConfigSerializerTest/whenSerializing_withNominalValues.conf
+++ b/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/serialization/ConfigSerializerTest/whenSerializing_withNominalValues.conf
@@ -1,6 +1,9 @@
 #         JobsReborn-PatchPlaceBreak
 # A patch place-break extension for JobsReborn
 #                (by Djaytan)
+# 
+# /!\ Properties ordering is nondeterministic at config generation time because of limitations
+# of underlying library.
 
 # Hostname (an IP address (IPv4/IPv6) or a domain name)
 # Value can't be empty or blank
