--- a/src/patch-place-break/patch-place-break-core/src/main/resources/config.conf
+++ b/src/patch-place-break/patch-place-break-core/src/main/resources/config.conf
@@ -1,6 +1,9 @@
 #         JobsReborn-PatchPlaceBreak
 # A patch place-break extension for JobsReborn
 #                (by Djaytan)
+# 
+# /!\ Properties ordering is nondeterministic because of limitations of underlying library
+# Feel free to reorder them at your own conveniences
 
 # Define where to store and retrieve data
 dataSource = {
