--- a/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/serialization/ConfigSerializerTest/whenSerializing_withNominalValues.conf
+++ b/src/patch-place-break/patch-place-break-config/src/test/resources/fr/djaytan/minecraft/jobsreborn/patchplacebreak/config/serialization/ConfigSerializerTest/whenSerializing_withNominalValues.conf
@@ -2,6 +2,9 @@
 # A patch place-break extension for JobsReborn
 #                (by Djaytan)
 # 
+# This config file use HOCON format
+# Specifications are here: https://github.com/lightbend/config/blob/main/HOCON.md
+# 
 # /!\ Properties ordering is nondeterministic at config generation time because of limitations
 # of underlying library.
 
