--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
   <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
   <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>pom</packaging>
 
   <name>JobsReborn-PatchPlaceBreak</name>
