--- a/src/patch-place-break/patch-place-break-internal/pom.xml
+++ b/src/patch-place-break/patch-place-break-internal/pom.xml
@@ -53,6 +53,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.errorprone</groupId>
       <artifactId>error_prone_annotations</artifactId>
       <scope>provided</scope>
