--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -45,11 +45,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <!-- Guava version of CraftBukkit is incompatible with Guice: must shade it in plugin -->
-    </dependency>
-    <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
     </dependency>
@@ -105,6 +100,12 @@
       <artifactId>sqlite-jdbc</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <scope>runtime</scope>
+      <!-- Guava version of CraftBukkit is incompatible with Guice: must shade it in plugin -->
+    </dependency>
   </dependencies>
 
   <build>
@@ -121,7 +122,6 @@
         <artifactId>maven-dependency-plugin</artifactId>
         <configuration>
           <ignoredUnusedDeclaredDependencies combine.children="append">
-            <ignoredUnusedDeclaredDependency>com.google.guava:guava</ignoredUnusedDeclaredDependency>
             <ignoredUnusedDeclaredDependency>com.mysql:mysql-connector-j</ignoredUnusedDeclaredDependency>
             <ignoredUnusedDeclaredDependency>org.xerial:sqlite-jdbc</ignoredUnusedDeclaredDependency>
           </ignoredUnusedDeclaredDependencies>
