--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+# Taken from https://github.com/dotnet/corefx/blob/master/.gitattributes
+
 # Set default behavior to automatically normalize line endings.
 * text=auto
 
