--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Taken from https://github.com/dotnet/corefx/blob/master/.gitattributes
+# Helpful article: https://rehansaeed.com/gitattributes-best-practices/
 
 # Set default behavior to automatically normalize line endings.
 * text=auto
