--- a/pom.xml
+++ b/pom.xml
@@ -70,66 +70,19 @@
     <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
     <java.version>8</java.version>
+
+    <!-- ==================== Sonar ==================== -->
     <sonar.organization>djaytan</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-merged-test-coverage-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 
-    <!-- ==================== Plugins versions ==================== -->
-    <builderHelperMavenPlugin.version>3.3.0</builderHelperMavenPlugin.version>
-    <fmtMavenPlugin.version>2.19</fmtMavenPlugin.version>
-    <jacocoMavenPlugin.version>0.8.8</jacocoMavenPlugin.version>
-    <mavenCleanPlugin.version>3.2.0</mavenCleanPlugin.version>
-    <mavenCompilerPlugin.version>3.10.1</mavenCompilerPlugin.version>
-    <mavenDependencyPlugin.version>3.5.0</mavenDependencyPlugin.version>
-    <mavenEnforcerPlugin.version>3.2.1</mavenEnforcerPlugin.version>
-    <mavenFailsafePlugin.version>3.0.0-M9</mavenFailsafePlugin.version>
-    <mavenInstallPlugin.version>3.1.0</mavenInstallPlugin.version>
-    <mavenJarPlugin.version>3.3.0</mavenJarPlugin.version>
-    <mavenJavadocPlugin.version>3.5.0</mavenJavadocPlugin.version>
-    <mavenReleasePlugin.version>3.0.0-M7</mavenReleasePlugin.version>
-    <mavenResourcesPlugin.version>3.3.0</mavenResourcesPlugin.version>
-    <mavenShadePlugin.version>3.4.1</mavenShadePlugin.version>
-    <mavenSourcePlugin.version>3.2.1</mavenSourcePlugin.version>
-    <mavenSurefirePlugin.version>3.0.0-M9</mavenSurefirePlugin.version>
-    <sortpomMavenPlugin.version>3.2.1</sortpomMavenPlugin.version>
-    <sonarMavenPlugin.version>3.9.1.2184</sonarMavenPlugin.version>
-
     <!-- ==================== Dependencies versions ==================== -->
-    <byteBuddy.version>1.13.0</byteBuddy.version>
-    <checkerframework.version>3.30.0</checkerframework.version>
-    <commons.io.version>2.11.0</commons.io.version>
-    <commons.lang3.version>3.12.0</commons.lang3.version>
     <configurate.version>4.1.2</configurate.version>
-    <errorProneAnnotations.version>2.18.0</errorProneAnnotations.version>
-    <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
-    <hikaricp.version>4.0.3</hikaricp.version>
-    <guava.version>31.1-jre</guava.version>
-    <guice.version>5.1.0</guice.version>
-    <!-- JEE v10+ requires JDK 11: don't bump it! -->
-    <jakarta.ee.api.version>9.1.0</jakarta.ee.api.version>
-    <!--
-      Latest version of Hibernate Validator compatible with Java 8: don't bump it!
-      As well compatible with JEE 9, bumping this implementation imply bumping Jakarta as well.
-    -->
-    <jakarta.validation.hibernate.version>7.0.5.Final</jakarta.validation.hibernate.version>
-    <!-- Glassfish EL v4 is compatible with JEE 9 -->
-    <jakarta.el.glassfish.version>4.0.2</jakarta.el.glassfish.version>
-    <javaxInject.version>1</javaxInject.version>
-    <jboss.logging.version>3.5.0.Final</jboss.logging.version>
-    <jboss.logging.annotations.version>2.2.1.Final</jboss.logging.annotations.version>
-    <jboss.logging.processor.version>2.2.1.Final</jboss.logging.processor.version>
-    <jimfs.version>1.2</jimfs.version>
-    <lombok.version>1.18.26</lombok.version>
-    <mysql.version>8.0.32</mysql.version>
     <slf4j.version>2.0.6</slf4j.version>
-    <sqlite.version>3.40.1.0</sqlite.version>
 
     <!-- ==================== Test Dependencies versions ==================== -->
-    <assertj.version>3.24.2</assertj.version>
-    <equalsverifier.version>3.13.2</equalsverifier.version>
-    <junitJupiter.version>5.9.2</junitJupiter.version>
+    <junit.version>5.9.2</junit.version>
     <mockito.version>4.11.0</mockito.version>
-    <toStringVerifier.version>1.4.8</toStringVerifier.version>
   </properties>
 
   <dependencyManagement>
@@ -137,109 +90,116 @@
       <dependency>
         <groupId>jakarta.platform</groupId>
         <artifactId>jakarta.jakartaee-bom</artifactId>
-        <version>${jakarta.ee.api.version}</version>
+        <!-- JEE v10+ requires JDK 11: don't bump it! -->
+        <version>9.1.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.google.errorprone</groupId>
         <artifactId>error_prone_annotations</artifactId>
-        <version>${errorProneAnnotations.version}</version>
+        <version>2.18.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>${guava.version}</version>
+        <version>31.1-jre</version>
       </dependency>
       <dependency>
         <groupId>com.google.inject</groupId>
         <artifactId>guice</artifactId>
-        <version>${guice.version}</version>
+        <version>5.1.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.jimfs</groupId>
         <artifactId>jimfs</artifactId>
-        <version>${jimfs.version}</version>
+        <version>1.2</version>
       </dependency>
       <dependency>
         <groupId>com.jparams</groupId>
         <artifactId>to-string-verifier</artifactId>
-        <version>${toStringVerifier.version}</version>
+        <version>1.4.8</version>
       </dependency>
       <dependency>
         <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
-        <version>${mysql.version}</version>
+        <version>8.0.32</version>
       </dependency>
       <dependency>
         <groupId>com.zaxxer</groupId>
         <artifactId>HikariCP</artifactId>
-        <version>${hikaricp.version}</version>
+        <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
+        <version>4.0.3</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>${commons.io.version}</version>
+        <version>2.11.0</version>
       </dependency>
       <dependency>
         <groupId>javax.inject</groupId>
         <artifactId>javax.inject</artifactId>
-        <version>${javaxInject.version}</version>
+        <version>1</version>
       </dependency>
       <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
-        <version>${byteBuddy.version}</version>
+        <version>1.13.0</version>
       </dependency>
       <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
         <artifactId>equalsverifier</artifactId>
-        <version>${equalsverifier.version}</version>
+        <version>3.13.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>${commons.lang3.version}</version>
+        <version>3.12.0</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>${assertj.version}</version>
+        <version>3.24.2</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish</groupId>
         <artifactId>jakarta.el</artifactId>
-        <version>${jakarta.el.glassfish.version}</version>
+        <!-- Glassfish EL v4 is compatible with JEE 9 -->
+        <version>4.0.2</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
-        <version>${jakarta.validation.hibernate.version}</version>
+        <!--
+          Latest version of Hibernate Validator compatible with Java 8: don't bump it!
+          As well compatible with JEE 9, bumping this implementation imply bumping Jakarta as well.
+        -->
+        <version>7.0.5.Final</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging</artifactId>
-        <version>${jboss.logging.version}</version>
+        <version>3.5.0.Final</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging-annotations</artifactId>
-        <version>${jboss.logging.annotations.version}</version>
+        <version>2.2.1.Final</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging-processor</artifactId>
-        <version>${jboss.logging.processor.version}</version>
+        <version>2.2.1.Final</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>${junitJupiter.version}</version>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-params</artifactId>
-        <version>${junitJupiter.version}</version>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -279,28 +239,17 @@
       <dependency>
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
-        <version>${sqlite.version}</version>
+        <version>3.40.1.0</version>
       </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
+        <version>1.18.26</version>
         <scope>provided</scope>
         <!-- Useful only before compile time for code generation -->
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <repositories>
-    <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-    </repository>
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
-    </repository>
-  </repositories>
 
   <build>
     <pluginManagement>
@@ -308,7 +257,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>${mavenShadePlugin.version}</version>
+          <version>3.4.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -316,7 +265,7 @@
       <plugin>
         <groupId>com.github.ekryd.sortpom</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
-        <version>${sortpomMavenPlugin.version}</version>
+        <version>3.2.1</version>
         <configuration>
           <createBackupFile>false</createBackupFile>
           <encoding>${project.encoding}</encoding>
@@ -349,7 +298,7 @@
       <plugin>
         <groupId>com.spotify.fmt</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
-        <version>${fmtMavenPlugin.version}</version>
+        <version>2.19</version>
         <executions>
           <execution>
             <goals>
@@ -362,12 +311,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>${mavenCleanPlugin.version}</version>
+        <version>3.2.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${mavenCompilerPlugin.version}</version>
+        <version>3.10.1</version>
         <configuration>
           <release>${java.version}</release>
           <failOnWarning>true</failOnWarning>
@@ -377,7 +326,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>${mavenDependencyPlugin.version}</version>
+        <version>3.5.0</version>
         <configuration>
           <failBuild>true</failBuild>
           <failOnWarning>true</failOnWarning>
@@ -408,7 +357,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>${mavenEnforcerPlugin.version}</version>
+        <version>3.2.1</version>
         <configuration>
           <fail>true</fail>
           <failFast>true</failFast>
@@ -472,7 +421,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${mavenFailsafePlugin.version}</version>
+        <version>3.0.0-M9</version>
         <configuration>
           <!--suppress UnresolvedMavenProperty - Defined at runtime by JaCoCo -->
           <argLine>${failsafe.jacoco.args}</argLine>
@@ -494,17 +443,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>${mavenInstallPlugin.version}</version>
+        <version>3.1.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>${mavenJarPlugin.version}</version>
+        <version>3.3.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${mavenJavadocPlugin.version}</version>
+        <version>3.5.0</version>
         <configuration>
           <quiet>true</quiet>
           <!-- TODO: reactive JavaDoc generation -->
@@ -522,7 +471,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>${mavenReleasePlugin.version}</version>
+        <version>3.0.0-M7</version>
         <configuration>
           <!-- Spigot API is a SNAPSHOT version... No other choice than to enable this option -->
           <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
@@ -535,12 +484,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>${mavenResourcesPlugin.version}</version>
+        <version>3.3.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>${mavenSourcePlugin.version}</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -554,7 +503,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${mavenSurefirePlugin.version}</version>
+        <version>3.0.0-M9</version>
         <configuration>
           <!--suppress UnresolvedMavenProperty - Defined at runtime by JaCoCo -->
           <argLine>${surefire.jacoco.args}</argLine>
@@ -571,7 +520,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacocoMavenPlugin.version}</version>
+        <version>0.8.8</version>
         <executions>
           <execution>
             <id>before-unit-test-execution</id>
@@ -678,7 +627,7 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>${sonarMavenPlugin.version}</version>
+        <version>3.9.1.2184</version>
       </plugin>
     </plugins>
   </build>
