--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -83,6 +83,7 @@
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
+      <!-- Provided by CraftBukkit at runtime -->
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -98,6 +99,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
+      <!-- Provided by CraftBukkit at runtime -->
       <scope>provided</scope>
     </dependency>
     <dependency>
