--- a/src/bukkit/pom.xml
+++ b/src/bukkit/pom.xml
@@ -44,84 +44,46 @@
   </modules>
 
   <properties>
-    <!-- ==================== General ==================== -->
     <main.basedir>${project.basedir}/../../</main.basedir>
-
-    <!-- ==================== Dependencies versions ==================== -->
-    <bstat.version>3.0.1</bstat.version>
-    <spigotApi.version>1.11.2-R0.1-SNAPSHOT</spigotApi.version>
-    <jobsReborn.version>v4.17.2</jobsReborn.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.bstats</groupId>
         <artifactId>bstats-bukkit</artifactId>
-        <version>${bstat.version}</version>
+        <version>3.0.1</version>
       </dependency>
       <dependency>
         <groupId>com.github.Zrips</groupId>
         <artifactId>Jobs</artifactId>
-        <version>${jobsReborn.version}</version>
-        <scope>provided</scope>
+        <version>v4.17.2</version>
         <!-- Server must have JobsReborn plugin installed -->
-      </dependency>
-      <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>${mysql.version}</version>
         <scope>provided</scope>
-        <!-- Provided by CraftBukkit at runtime -->
       </dependency>
       <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
-        <version>${spigotApi.version}</version>
+        <version>1.11.2-R0.1-SNAPSHOT</version>
+        <!-- The server must be a Spigot one or a derivative one (e.g. PaperMC, Purpur, ...) -->
         <scope>provided</scope>
-        <!-- The server must be a Spigot one or a derivative one (e.g. PaperMC) -->
         <exclusions>
-          <!-- Unused dependencies -->
           <exclusion>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang3</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-chat</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.avaje</groupId>
-            <artifactId>ebean</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.xerial</groupId>
-        <artifactId>sqlite-jdbc</artifactId>
-        <version>${sqlite.version}</version>
-        <scope>provided</scope>
-        <!-- Provided by CraftBukkit at runtime -->
       </dependency>
     </dependencies>
   </dependencyManagement>
