chore(java): allow java 17 for google-java-format IntelliJ plugin use

--- a/pom.xml
+++ b/pom.xml
@@ -394,7 +394,7 @@
             <dependencyConvergence />
             <reactorModuleConvergence />
             <requireJavaVersion>
-              <version>[11,12)</version>
+              <version>[11,17]</version>
             </requireJavaVersion>
             <requireMavenVersion>
               <version>[3.6,)</version>
