--- a/pom.xml
+++ b/pom.xml
@@ -394,7 +394,7 @@
             <dependencyConvergence />
             <reactorModuleConvergence />
             <requireJavaVersion>
-              <version>[11,17]</version>
+              <version>[11,18)</version>
             </requireJavaVersion>
             <requireMavenVersion>
               <version>[3.6,)</version>
