--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,12 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package
+      
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Git checkout
+      uses: actions/checkout@v3
     - name: Maven Release and Publish
       if: github.event_name == 'push'
       uses: mg-smartrent/github-actions-maven-release@v1.5
