--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,10 @@
   </modules>
 
   <scm>
-    <connection>scm:git:git@github.com:Djaytan/mc-jobs-reborn-patch-place-break.git</connection>
-    <developerConnection>scm:git:git@github.com:Djaytan/mc-jobs-reborn-patch-place-break.git</developerConnection>
-    <tag>v1.3.0</tag>
-    <url>https://github.com/Djaytan/mc-jobs-reborn-patch-place-break</url>
+    <connection>scm:git:${project.scm.url}</connection>
+    <developerConnection>scm:git:${project.scm.url}</developerConnection>
+    <url>git@github.com:Djaytan/mc-jobs-reborn-patch-place-break.git</url>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
@@ -467,6 +467,7 @@
             <checkModificationExclude>pom.xml</checkModificationExclude>
           </checkModificationExcludes>
           <tagNameFormat>v@{project.version}</tagNameFormat>
+          <scmCommentPrefix>[ci skip] </scmCommentPrefix>
         </configuration>
       </plugin>
       <plugin>
