--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
     <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
     <java.version>8</java.version>
+
+    <!-- ==================== Sonar ==================== -->
+    <sonar.organization>djaytan</sonar.organization>
+    <sonar.projectKey>Djaytan_mc-jobs-reborn-patch-place-break</sonar.projectKey>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-merged-test-coverage-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 
     <!-- ==================== Dependencies versions ==================== -->
