build(ci/cd): prepare CD automation

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MAVEN_MAIN_ARGS: -Pcontinuous-integration -B -e -C --fail-at-end --no-transfer-progress
+      MAVEN_MAIN_ARGS: -Pcontinuous-integration -U -B -e -C --fail-at-end --no-transfer-progress
       MAVEN_SKIP_ARGS: -Dfmt.skip=true -Dsort.skip=true -Denforcer.skip=true
     steps:
     - name: Git checkout
