refactor: remove @__ symbol which raise an error at javadoc check time

--- a/pom.xml
+++ b/pom.xml
@@ -447,8 +447,7 @@
         <version>3.5.0</version>
         <configuration>
           <quiet>true</quiet>
-          <!-- TODO: reactive JavaDoc generation -->
-          <skip>true</skip>
+          <additionalOptions>-Xdoclint:none</additionalOptions>
         </configuration>
         <executions>
           <execution>
