--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     branches: [ 'main' ]
 
 env:
-  MAVEN_MAIN_ARGS: -Pcontinuous-integration -U -B -e -C --fail-at-end --no-transfer-progress
+  MAVEN_MAIN_ARGS: -Pcontinuous-integration -U -B -e -C --fail-at-end
   MAVEN_SKIP_ARGS: -DskipTests=true -DskipITs=true -Dfmt.skip=true -Dsort.skip=true -Denforcer.skip=true
 
 jobs:
