--- a/pom.xml
+++ b/pom.xml
@@ -621,6 +621,15 @@
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
         <version>3.9.1.2184</version>
+        <executions>
+          <execution>
+            <id>sonar-analysis</id>
+            <goals>
+              <goal>sonar</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -632,13 +641,15 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
+        <!-- Sonar must be run only in CI/CD environment -->
+        <sonar.skip>true</sonar.skip>
         <fmt.goal>format</fmt.goal>
         <fmt.phase>process-sources</fmt.phase>
         <sortpom.goal>sort</sortpom.goal>
       </properties>
     </profile>
     <profile>
-      <id>continuous-integration</id>
+      <id>ci-cd</id>
       <properties>
         <fmt.goal>check</fmt.goal>
         <!-- We want to fail ASAP if format is invalid -->
