--- a/src/patch-place-break/patch-place-break/pom.xml
+++ b/src/patch-place-break/patch-place-break/pom.xml
@@ -94,6 +94,10 @@
       <artifactId>javax.inject</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
