feat: add compatibility with MySQL for data migration

--- a/src/bukkit/bukkit-plugin/pom.xml
+++ b/src/bukkit/bukkit-plugin/pom.xml
@@ -149,6 +149,7 @@
                 <exclude>META-INF/*.DSA</exclude>
                 <exclude>META-INF/*.RSA</exclude>
                 <exclude>META-INF/MANIFEST*</exclude>
+                <exclude>META-INF/README.txt</exclude>
               </excludes>
             </filter>
           </filters>
