--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
 
     <!-- ==================== Dependencies versions ==================== -->
     <configurate.version>4.1.2</configurate.version>
+    <flyway.version>9.15.1</flyway.version>
     <slf4j.version>2.0.6</slf4j.version>
 
     <!-- ==================== Test Dependencies versions ==================== -->
@@ -178,10 +179,16 @@
         <artifactId>assertj-core</artifactId>
         <version>3.24.2</version>
       </dependency>
+      <!-- TODO: use BOM when possible: https://github.com/spring-projects/spring-boot/pull/34342 -->
       <dependency>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-core</artifactId>
-        <version>9.15.1</version>
+        <version>${flyway.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-mysql</artifactId>
+        <version>${flyway.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish</groupId>
