--- a/src/storage/storage-mysql/pom.xml
+++ b/src/storage/storage-mysql/pom.xml
@@ -69,5 +69,10 @@
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-mysql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
